--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,25 +5,28 @@
 #    make up
 #
 alabaster==0.7.12         # via sphinx
-appdirs==1.4.3            # via black
-astroid==2.3.3            # via pylint
-asynctest==0.13.0
-atomicwrites==1.3.0       # via pytest
-attrs==19.3.0
-babel==2.7.0              # via sphinx
-bandit==1.6.2
-black==19.10b0 ; python_version >= "3.6"
-bleach==3.1.1             # via readme-renderer
-cattrs==0.9.0
-certifi==2019.9.11
-chardet==3.0.4
-click==7.0
-colorama==0.4.1           # via green
-coverage==4.5.4           # via coveralls, green, nose2
-coveralls==1.8.2
-digicubes-common==0.0.12
-digicubes-pyclient==0.0.6
-doc8==0.8.0
+appdirs==1.4.3            # via black, virtualenv
+astroid==2.4.1            # via pylint
+asynctest==0.13.0         # via -r requirements-dev.in
+attrs==19.3.0             # via -r requirements.txt, black, cattrs, digicubes-common, digicubes-pyclient, pytest
+babel==2.8.0              # via sphinx
+bandit==1.6.2             # via -r requirements-dev.in
+black==19.10b0 ; python_version >= "3.6"  # via -r requirements-dev.in
+bleach==3.1.5             # via readme-renderer
+cattrs==1.0.0             # via -r requirements.txt, digicubes-common, digicubes-pyclient
+certifi==2020.4.5.1       # via -r requirements.txt, digicubes-pyclient, requests
+cffi==1.14.0              # via cryptography
+chardet==3.0.4            # via -r requirements.txt, digicubes-pyclient, doc8, requests
+click==7.1.2              # via -r requirements.txt, black, flask, pip-tools
+colorama==0.4.3           # via green
+coverage==5.1             # via coveralls, green, nose2
+coveralls==2.0.0          # via -r requirements-dev.in
+cryptography==2.9.2       # via secretstorage
+digicubes-common==0.1.6   # via -r requirements.txt, digicubes-pyclient
+digicubes-pyclient==0.1.17  # via -r requirements.txt
+distlib==0.3.0            # via virtualenv
+dnspython==1.16.0         # via -r requirements.txt, email-validator
+doc8==0.8.0               # via -r requirements-dev.in
 docopt==0.6.2             # via coveralls
 docutils==0.16            # via -r requirements-dev.in, doc8, readme-renderer, restructuredtext-lint, rstcheck, sphinx
 email-validator==1.1.0    # via -r requirements.txt
@@ -31,23 +34,26 @@ entrypoints==0.3          # via flake8
 filelock==3.0.12          # via tox, virtualenv
 flake8-isort==3.0.0       # via -r requirements-dev.in
 flake8==3.7.9             # via flake8-isort
-flask-wtf==0.14.2
-flask==1.1.1
-gitdb2==2.0.6             # via gitpython
-gitpython==3.0.5          # via bandit
-green==3.0.0
-idna==2.8
-imagesize==1.1.0          # via sphinx
-isort==4.3.21             # via flake8-isort, pylint
-itsdangerous==1.1.0
-jinja2==2.10.3
+flask-wtf==0.14.3         # via -r requirements.txt
+flask==1.1.2              # via -r requirements.txt, flask-wtf
+gitdb==4.0.5              # via gitpython
+gitpython==3.1.2          # via bandit
+green==3.1.4              # via -r requirements-dev.in
+gunicorn==20.0.4          # via -r requirements.txt
+idna==2.9                 # via -r requirements.txt, digicubes-pyclient, email-validator, requests
+imagesize==1.2.0          # via sphinx
+isort[pyproject]==4.3.21  # via flake8-isort, pylint
+itsdangerous==1.1.0       # via -r requirements.txt, flask, flask-wtf
+jeepney==0.4.3            # via keyring, secretstorage
+jinja2==2.11.2            # via -r requirements.txt, flask, pybadges, sphinx
+keyring==21.2.1           # via twine
 lazy-object-proxy==1.4.3  # via astroid
 libgravatar==0.2.3        # via -r requirements.txt
 lxml==4.5.0               # via green
-markdown==3.2.1           # via -r requirements.txt
+markdown==3.2.2           # via -r requirements.txt
 markupsafe==1.1.1         # via -r requirements.txt, jinja2, wtforms
 mccabe==0.6.1             # via flake8, pylint
-more-itertools==7.2.0     # via pytest
+more-itertools==8.2.0     # via pytest
 mypy-extensions==0.4.3    # via mypy
 mypy==0.770               # via -r requirements-dev.in
 nose2==0.9.2              # via -r requirements-dev.in
@@ -67,12 +73,12 @@ pygments==2.6.1           # via -r requirements-dev.in, readme-renderer, sphinx
 pyjwt==1.7.1              # via -r requirements.txt
 pylint==2.5.2             # via -r requirements-dev.in
 pyparsing==2.4.7          # via packaging
-pytest==5.4.1             # via -r requirements-dev.in
+pytest==5.4.2             # via -r requirements-dev.in
 python-dotenv==0.13.0     # via -r requirements.txt
 pytz==2020.1              # via babel
 pyyaml==5.3.1             # via -r requirements.txt, bandit, pyaml
 readme-renderer==26.0     # via twine
-regex==2020.4.4           # via black
+regex==2020.5.7           # via black
 requests-toolbelt==0.9.1  # via twine
 requests==2.23.0          # via -r requirements.txt, coveralls, digicubes-pyclient, pybadges, requests-toolbelt, sphinx, twine
 restructuredtext-lint==1.3.0  # via doc8
@@ -88,24 +94,25 @@ sphinxcontrib-devhelp==1.0.2  # via sphinx
 sphinxcontrib-htmlhelp==1.0.3  # via sphinx
 sphinxcontrib-httpdomain==1.7.0  # via -r requirements-dev.in
 sphinxcontrib-jsmath==1.0.1  # via sphinx
-sphinxcontrib-qthelp==1.0.2  # via sphinx
-sphinxcontrib-serializinghtml==1.1.3  # via sphinx
-stevedore==1.31.0         # via bandit, doc8
-testfixtures==6.10.2      # via flake8-isort
-toml==0.10.0              # via black, tox
-tox==3.14.1
-tqdm==4.38.0              # via twine
-twine==2.0.0
-typed-ast==1.4.0          # via black, mypy
-typing-extensions==3.7.4.1  # via mypy
+sphinxcontrib-qthelp==1.0.3  # via sphinx
+sphinxcontrib-serializinghtml==1.1.4  # via sphinx
+stevedore==1.32.0         # via bandit, doc8
+testfixtures==6.14.1      # via flake8-isort
+toml==0.10.0              # via black, isort, pylint, tox
+tox==3.15.0               # via -r requirements-dev.in
+tqdm==4.46.0              # via twine
+twine==3.1.1              # via -r requirements-dev.in
+typed-ast==1.4.1          # via black, mypy
+typing-extensions==3.7.4.2  # via mypy
 unidecode==1.1.1          # via green
 urllib3==1.25.9           # via -r requirements.txt, digicubes-pyclient, requests
 virtualenv==20.0.20       # via tox
 wcwidth==0.1.9            # via pytest
 webencodings==0.5.1       # via bleach
-werkzeug==0.16.0
-wrapt==1.11.2             # via astroid
-wtforms==2.2.1
+werkzeug==1.0.1           # via -r requirements.txt, flask
+wrapt==1.12.1             # via astroid
+wtforms==2.3.1            # via -r requirements.txt, flask-wtf
 
 # The following packages are considered to be unsafe in a requirements file:
+# pip
 # setuptools
