--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -9,7 +9,7 @@ appdirs==1.4.4            # via black, virtualenv
 astroid==2.4.1            # via pylint
 asynctest==0.13.0         # via -r requirements-dev.in
 attrs==19.3.0             # via -r requirements.txt, black, cattrs, digicubes-common, digicubes-pyclient, pytest
-babel==2.8.0              # via sphinx
+babel==2.8.0              # via -r requirements.txt, flask-babel, sphinx
 bandit==1.6.2             # via -r requirements-dev.in
 black==19.10b0 ; python_version >= "3.6"  # via -r requirements-dev.in
 bleach==3.1.5             # via readme-renderer
@@ -23,7 +23,7 @@ coverage==5.1             # via coveralls, green, nose2
 coveralls==2.0.0          # via -r requirements-dev.in
 cryptography==2.9.2       # via secretstorage
 digicubes-common==0.1.6   # via -r requirements.txt, digicubes-pyclient
-digicubes-pyclient==0.1.21  # via -r requirements.txt
+digicubes-pyclient==0.1.22  # via -r requirements.txt
 distlib==0.3.0            # via virtualenv
 dnspython==1.16.0         # via -r requirements.txt, email-validator
 doc8==0.8.0               # via -r requirements-dev.in
@@ -33,8 +33,9 @@ email-validator==1.1.0    # via -r requirements.txt
 filelock==3.0.12          # via tox, virtualenv
 flake8-isort==3.0.0       # via -r requirements-dev.in
 flake8==3.8.1             # via flake8-isort
+flask-babel==1.0.0        # via -r requirements.txt
 flask-wtf==0.14.3         # via -r requirements.txt
-flask==1.1.2              # via -r requirements.txt, flask-wtf
+flask==1.1.2              # via -r requirements.txt, flask-babel, flask-wtf
 gitdb==4.0.5              # via gitpython
 gitpython==3.1.2          # via bandit
 green==3.1.4              # via -r requirements-dev.in
@@ -44,7 +45,7 @@ imagesize==1.2.0          # via sphinx
 isort[pyproject]==4.3.21  # via flake8-isort, pylint
 itsdangerous==1.1.0       # via -r requirements.txt, flask, flask-wtf
 jeepney==0.4.3            # via keyring, secretstorage
-jinja2==2.11.2            # via -r requirements.txt, flask, pybadges, sphinx
+jinja2==2.11.2            # via -r requirements.txt, flask, flask-babel, pybadges, sphinx
 keyring==21.2.1           # via twine
 lazy-object-proxy==1.4.3  # via astroid
 libgravatar==0.2.3        # via -r requirements.txt
@@ -74,11 +75,11 @@ pylint==2.5.2             # via -r requirements-dev.in
 pyparsing==2.4.7          # via packaging
 pytest==5.4.2             # via -r requirements-dev.in
 python-dotenv==0.13.0     # via -r requirements.txt
-pytz==2020.1              # via babel
+pytz==2020.1              # via -r requirements.txt, babel, flask-babel
 pyyaml==5.3.1             # via -r requirements.txt, bandit, pyaml
 readme-renderer==26.0     # via twine
 redis==3.5.1              # via -r requirements.txt, digicubes-pyclient
-regex==2020.5.7           # via black
+regex==2020.5.13          # via black
 requests-toolbelt==0.9.1  # via twine
 requests==2.23.0          # via -r requirements.txt, coveralls, digicubes-pyclient, pybadges, requests-toolbelt, sphinx, twine
 restructuredtext-lint==1.3.0  # via doc8
