--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,7 +5,7 @@
 #    make up
 #
 alabaster==0.7.12         # via sphinx
-appdirs==1.4.3            # via black, virtualenv
+appdirs==1.4.4            # via black, virtualenv
 astroid==2.4.1            # via pylint
 asynctest==0.13.0         # via -r requirements-dev.in
 attrs==19.3.0             # via -r requirements.txt, black, cattrs, digicubes-common, digicubes-pyclient, pytest
@@ -23,17 +23,16 @@ coverage==5.1             # via coveralls, green, nose2
 coveralls==2.0.0          # via -r requirements-dev.in
 cryptography==2.9.2       # via secretstorage
 digicubes-common==0.1.6   # via -r requirements.txt, digicubes-pyclient
-digicubes-pyclient==0.1.19  # via -r requirements.txt
+digicubes-pyclient==0.1.20  # via -r requirements.txt
 distlib==0.3.0            # via virtualenv
 dnspython==1.16.0         # via -r requirements.txt, email-validator
 doc8==0.8.0               # via -r requirements-dev.in
 docopt==0.6.2             # via coveralls
 docutils==0.16            # via -r requirements-dev.in, doc8, readme-renderer, restructuredtext-lint, rstcheck, sphinx
 email-validator==1.1.0    # via -r requirements.txt
-entrypoints==0.3          # via flake8
 filelock==3.0.12          # via tox, virtualenv
 flake8-isort==3.0.0       # via -r requirements-dev.in
-flake8==3.7.9             # via flake8-isort
+flake8==3.8.1             # via flake8-isort
 flask-wtf==0.14.3         # via -r requirements.txt
 flask==1.1.2              # via -r requirements.txt, flask-wtf
 gitdb==4.0.5              # via gitpython
@@ -66,9 +65,9 @@ pluggy==0.13.1            # via pytest, tox
 py==1.8.1                 # via pytest, tox
 pyaml==20.4.0             # via -r requirements.txt
 pybadges==2.2.1           # via -r requirements-dev.in
-pycodestyle==2.5.0        # via flake8
+pycodestyle==2.6.0        # via flake8
 pycparser==2.20           # via cffi
-pyflakes==2.1.1           # via flake8
+pyflakes==2.2.0           # via flake8
 pygments==2.6.1           # via -r requirements-dev.in, readme-renderer, sphinx
 pyjwt==1.7.1              # via -r requirements.txt
 pylint==2.5.2             # via -r requirements-dev.in
@@ -78,6 +77,7 @@ python-dotenv==0.13.0     # via -r requirements.txt
 pytz==2020.1              # via babel
 pyyaml==5.3.1             # via -r requirements.txt, bandit, pyaml
 readme-renderer==26.0     # via twine
+redis==3.5.1              # via -r requirements.txt, digicubes-pyclient
 regex==2020.5.7           # via black
 requests-toolbelt==0.9.1  # via twine
 requests==2.23.0          # via -r requirements.txt, coveralls, digicubes-pyclient, pybadges, requests-toolbelt, sphinx, twine
