--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -8,22 +8,20 @@ alabaster==0.7.12         # via sphinx
 appdirs==1.4.4            # via black, virtualenv
 astroid==2.4.1            # via pylint
 asynctest==0.13.0         # via -r requirements-dev.in
-attrs==19.3.0             # via -r requirements.txt, black, cattrs, digicubes-common, digicubes-pyclient, pytest
+attrs==19.3.0             # via -r requirements.txt, black, cattrs, pytest
 babel==2.8.0              # via -r requirements.txt, flask-babel, sphinx
 bandit==1.6.2             # via -r requirements-dev.in
 black==19.10b0 ; python_version >= "3.6"  # via -r requirements-dev.in
 bleach==3.1.5             # via readme-renderer
-cattrs==1.0.0             # via -r requirements.txt, digicubes-common, digicubes-pyclient
-certifi==2020.4.5.1       # via -r requirements.txt, digicubes-pyclient, requests
+cattrs==1.0.0             # via -r requirements.txt
+certifi==2020.4.5.1       # via -r requirements.txt, requests
 cffi==1.14.0              # via cryptography
-chardet==3.0.4            # via -r requirements.txt, digicubes-pyclient, doc8, requests
+chardet==3.0.4            # via -r requirements.txt, doc8, requests
 click==7.1.2              # via -r requirements.txt, black, flask, pip-tools
 colorama==0.4.3           # via green
 coverage==5.1             # via coveralls, green, nose2
 coveralls==2.0.0          # via -r requirements-dev.in
 cryptography==2.9.2       # via secretstorage
-digicubes-common==0.1.6   # via -r requirements.txt, digicubes-pyclient
-digicubes-pyclient==0.1.22  # via -r requirements.txt
 distlib==0.3.0            # via virtualenv
 dnspython==1.16.0         # via -r requirements.txt, email-validator
 doc8==0.8.0               # via -r requirements-dev.in
@@ -40,7 +38,7 @@ gitdb==4.0.5              # via gitpython
 gitpython==3.1.2          # via bandit
 green==3.1.4              # via -r requirements-dev.in
 gunicorn==20.0.4          # via -r requirements.txt
-idna==2.9                 # via -r requirements.txt, digicubes-pyclient, email-validator, requests
+idna==2.9                 # via -r requirements.txt, email-validator, requests
 imagesize==1.2.0          # via sphinx
 isort[pyproject]==4.3.21  # via flake8-isort, pylint
 itsdangerous==1.1.0       # via -r requirements.txt, flask, flask-wtf
@@ -78,10 +76,10 @@ python-dotenv==0.13.0     # via -r requirements.txt
 pytz==2020.1              # via -r requirements.txt, babel, flask-babel
 pyyaml==5.3.1             # via -r requirements.txt, bandit, pyaml
 readme-renderer==26.0     # via twine
-redis==3.5.1              # via -r requirements.txt, digicubes-pyclient
+redis==3.5.2              # via -r requirements.txt
 regex==2020.5.14          # via black
 requests-toolbelt==0.9.1  # via twine
-requests==2.23.0          # via -r requirements.txt, coveralls, digicubes-pyclient, pybadges, requests-toolbelt, sphinx, twine
+requests==2.23.0          # via -r requirements.txt, coveralls, pybadges, requests-toolbelt, sphinx, twine
 restructuredtext-lint==1.3.0  # via doc8
 rstcheck==3.3.1           # via -r requirements-dev.in
 secretstorage==3.1.2      # via keyring
@@ -106,7 +104,7 @@ twine==3.1.1              # via -r requirements-dev.in
 typed-ast==1.4.1          # via black, mypy
 typing-extensions==3.7.4.2  # via mypy
 unidecode==1.1.1          # via green
-urllib3==1.25.9           # via -r requirements.txt, digicubes-pyclient, requests
+urllib3==1.25.9           # via -r requirements.txt, requests
 virtualenv==20.0.20       # via tox
 wcwidth==0.1.9            # via pytest
 webencodings==0.5.1       # via bleach
