--- a/requirements.txt
+++ b/requirements.txt
@@ -4,21 +4,19 @@
 #
 #    make up
 #
-attrs==19.3.0             # via cattrs, digicubes-common, digicubes-pyclient
+attrs==19.3.0             # via -r requirements.in, cattrs
 babel==2.8.0              # via flask-babel
-cattrs==1.0.0             # via digicubes-common, digicubes-pyclient
-certifi==2020.4.5.1       # via digicubes-pyclient, requests
-chardet==3.0.4            # via digicubes-pyclient, requests
+cattrs==1.0.0             # via -r requirements.in
+certifi==2020.4.5.1       # via requests
+chardet==3.0.4            # via requests
 click==7.1.2              # via flask
-digicubes-common==0.1.6   # via digicubes-pyclient
-digicubes-pyclient==0.1.22  # via -r requirements.in
 dnspython==1.16.0         # via email-validator
 email-validator==1.1.0    # via -r requirements.in
 flask-babel==1.0.0        # via -r requirements.in
 flask-wtf==0.14.3         # via -r requirements.in
 flask==1.1.2              # via -r requirements.in, flask-babel, flask-wtf
 gunicorn==20.0.4          # via -r requirements.in
-idna==2.9                 # via digicubes-pyclient, email-validator, requests
+idna==2.9                 # via email-validator, requests
 itsdangerous==1.1.0       # via flask, flask-wtf
 jinja2==2.11.2            # via flask, flask-babel
 libgravatar==0.2.3        # via -r requirements.in
@@ -29,9 +27,9 @@ pyjwt==1.7.1              # via -r requirements.in
 python-dotenv==0.13.0     # via -r requirements.in
 pytz==2020.1              # via babel, flask-babel
 pyyaml==5.3.1             # via pyaml
-redis==3.5.1              # via digicubes-pyclient
-requests==2.23.0          # via -r requirements.in, digicubes-pyclient
-urllib3==1.25.9           # via digicubes-pyclient, requests
+redis==3.5.2              # via -r requirements.in
+requests==2.23.0          # via -r requirements.in
+urllib3==1.25.9           # via requests
 werkzeug==1.0.1           # via flask
 wtforms==2.3.1            # via flask-wtf
 
