--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,7 +6,7 @@
 #
 alabaster==0.7.12         # via sphinx
 appdirs==1.4.4            # via black, virtualenv
-astroid==2.4.1            # via pylint
+astroid==2.4.2            # via pylint
 asynctest==0.13.0         # via -r requirements-dev.in
 attrs==19.3.0             # via -r requirements.txt, black, cattrs, pytest
 babel==2.8.0              # via -r requirements.txt, flask-babel, sphinx
@@ -14,80 +14,82 @@ bandit==1.6.2             # via -r requirements-dev.in
 black==19.10b0 ; python_version >= "3.6"  # via -r requirements-dev.in
 bleach==3.1.5             # via readme-renderer
 cattrs==1.0.0             # via -r requirements.txt
-certifi==2020.4.5.1       # via -r requirements.txt, requests
-cffi==1.14.0              # via cryptography
+certifi==2020.6.20        # via -r requirements.txt, requests
+cffi==1.14.2              # via cryptography
 chardet==3.0.4            # via -r requirements.txt, doc8, requests
 click==7.1.2              # via -r requirements.txt, black, flask, pip-tools
-colorama==0.4.3           # via green
-coverage==5.1             # via coveralls, green, nose2
-coveralls==2.0.0          # via -r requirements-dev.in
-cryptography==2.9.2       # via secretstorage
-distlib==0.3.0            # via virtualenv
-dnspython==1.16.0         # via -r requirements.txt, email-validator
-doc8==0.8.0               # via -r requirements-dev.in
+colorama==0.4.3           # via green, twine
+coverage==5.2.1           # via coveralls, green, nose2
+coveralls==2.1.2          # via -r requirements-dev.in
+cryptography==3.0         # via secretstorage
+distlib==0.3.1            # via virtualenv
+dnspython==2.0.0          # via -r requirements.txt, email-validator
+doc8==0.8.1               # via -r requirements-dev.in
 docopt==0.6.2             # via coveralls
 docutils==0.16            # via -r requirements-dev.in, doc8, readme-renderer, restructuredtext-lint, rstcheck, sphinx
-email-validator==1.1.0    # via -r requirements.txt
+email-validator==1.1.1    # via -r requirements.txt
 filelock==3.0.12          # via tox, virtualenv
-flake8-isort==3.0.0       # via -r requirements-dev.in
-flake8==3.8.1             # via flake8-isort
+flake8-isort==4.0.0       # via -r requirements-dev.in
+flake8==3.8.3             # via flake8-isort
 flask-babel==1.0.0        # via -r requirements.txt
 flask-wtf==0.14.3         # via -r requirements.txt
 flask==1.1.2              # via -r requirements.txt, flask-babel, flask-wtf
 gitdb==4.0.5              # via gitpython
-gitpython==3.1.2          # via bandit
-green==3.1.4              # via -r requirements-dev.in
+gitpython==3.1.7          # via bandit
+green==3.2.1              # via -r requirements-dev.in
 gunicorn==20.0.4          # via -r requirements.txt
-idna==2.9                 # via -r requirements.txt, email-validator, requests
+idna==2.10                # via -r requirements.txt, email-validator, requests
 imagesize==1.2.0          # via sphinx
-isort[pyproject]==4.3.21  # via flake8-isort, pylint
+iniconfig==1.0.1          # via pytest
+isort==4.3.21             # via flake8-isort, pylint
 itsdangerous==1.1.0       # via -r requirements.txt, flask, flask-wtf
 jeepney==0.4.3            # via keyring, secretstorage
 jinja2==2.11.2            # via -r requirements.txt, flask, flask-babel, pybadges, sphinx
-keyring==21.2.1           # via twine
+keyring==21.3.0           # via twine
 lazy-object-proxy==1.4.3  # via astroid
-libgravatar==0.2.3        # via -r requirements.txt
-lxml==4.5.0               # via green
+libgravatar==0.2.4        # via -r requirements.txt
+lxml==4.5.2               # via green
 markdown==3.2.2           # via -r requirements.txt
 markupsafe==1.1.1         # via -r requirements.txt, jinja2, wtforms
 mccabe==0.6.1             # via flake8, pylint
-more-itertools==8.2.0     # via pytest
+more-itertools==8.4.0     # via pytest
 mypy-extensions==0.4.3    # via mypy
-mypy==0.770               # via -r requirements-dev.in
+mypy==0.782               # via -r requirements-dev.in
 nose2==0.9.2              # via -r requirements-dev.in
-packaging==20.3           # via bleach, pytest, sphinx, tox
+packaging==20.4           # via bleach, pytest, sphinx, tox
 pathspec==0.8.0           # via black
 pbr==5.4.5                # via stevedore
-pip-tools==5.1.2          # via -r requirements-dev.in
+pip-tools==5.3.1          # via -r requirements-dev.in
 pkginfo==1.5.0.1          # via twine
 pluggy==0.13.1            # via pytest, tox
-py==1.8.1                 # via pytest, tox
+py==1.9.0                 # via pytest, tox
 pyaml==20.4.0             # via -r requirements.txt
 pybadges==2.2.1           # via -r requirements-dev.in
 pycodestyle==2.6.0        # via flake8
 pycparser==2.20           # via cffi
 pyflakes==2.2.0           # via flake8
-pygments==2.6.1           # via -r requirements-dev.in, readme-renderer, sphinx
+pygments==2.6.1           # via -r requirements-dev.in, doc8, readme-renderer, sphinx
 pyjwt==1.7.1              # via -r requirements.txt
-pylint==2.5.2             # via -r requirements-dev.in
+pylint==2.5.3             # via -r requirements-dev.in
 pyparsing==2.4.7          # via packaging
-pytest==5.4.2             # via -r requirements-dev.in
-python-dotenv==0.13.0     # via -r requirements.txt
+pytest==6.0.1             # via -r requirements-dev.in
+python-dotenv==0.14.0     # via -r requirements.txt
 pytz==2020.1              # via -r requirements.txt, babel, flask-babel
 pyyaml==5.3.1             # via -r requirements.txt, bandit, pyaml
 readme-renderer==26.0     # via twine
-redis==3.5.2              # via -r requirements.txt
-regex==2020.5.14          # via black
+redis==3.5.3              # via -r requirements.txt
+regex==2020.7.14          # via black
 requests-toolbelt==0.9.1  # via twine
-requests==2.23.0          # via -r requirements.txt, coveralls, pybadges, requests-toolbelt, sphinx, twine
-restructuredtext-lint==1.3.0  # via doc8
+requests==2.24.0          # via -r requirements.txt, coveralls, pybadges, requests-toolbelt, sphinx, twine
+restructuredtext-lint==1.3.1  # via doc8
+rfc3986==1.4.0            # via twine
 rstcheck==3.3.1           # via -r requirements-dev.in
 secretstorage==3.1.2      # via keyring
-six==1.14.0               # via astroid, bandit, bleach, cryptography, doc8, nose2, packaging, pip-tools, readme-renderer, sphinxcontrib-httpdomain, stevedore, tox, virtualenv
+six==1.15.0               # via astroid, bandit, bleach, cryptography, doc8, nose2, packaging, pip-tools, readme-renderer, sphinxcontrib-httpdomain, tox, virtualenv
 smmap==3.0.4              # via gitdb
 snowballstemmer==2.0.0    # via sphinx
-sphinx-rtd-theme==0.4.3   # via -r requirements-dev.in
-sphinx==3.0.3             # via -r requirements-dev.in, sphinx-rtd-theme, sphinxcontrib-httpdomain
+sphinx-rtd-theme==0.5.0   # via -r requirements-dev.in
+sphinx==3.2.1             # via -r requirements-dev.in, sphinx-rtd-theme, sphinxcontrib-httpdomain
 sphinxcontrib-applehelp==1.0.2  # via sphinx
 sphinxcontrib-devhelp==1.0.2  # via sphinx
 sphinxcontrib-htmlhelp==1.0.3  # via sphinx
@@ -95,22 +97,21 @@ sphinxcontrib-httpdomain==1.7.0  # via -r requirements-dev.in
 sphinxcontrib-jsmath==1.0.1  # via sphinx
 sphinxcontrib-qthelp==1.0.3  # via sphinx
 sphinxcontrib-serializinghtml==1.1.4  # via sphinx
-stevedore==1.32.0         # via bandit, doc8
+stevedore==3.2.0          # via bandit, doc8
 testfixtures==6.14.1      # via flake8-isort
-toml==0.10.1              # via black, isort, pylint, tox
-tox==3.15.0               # via -r requirements-dev.in
-tqdm==4.46.0              # via twine
-twine==3.1.1              # via -r requirements-dev.in
+toml==0.10.1              # via black, pylint, pytest, tox
+tox==3.19.0               # via -r requirements-dev.in
+tqdm==4.48.2              # via twine
+twine==3.2.0              # via -r requirements-dev.in
 typed-ast==1.4.1          # via black, mypy
 typing-extensions==3.7.4.2  # via mypy
 unidecode==1.1.1          # via green
-urllib3==1.25.9           # via -r requirements.txt, requests
-virtualenv==20.0.20       # via tox
-wcwidth==0.1.9            # via pytest
+urllib3==1.25.10          # via -r requirements.txt, requests
+virtualenv==20.0.31       # via tox
 webencodings==0.5.1       # via bleach
 werkzeug==1.0.1           # via -r requirements.txt, flask
 wrapt==1.12.1             # via astroid
-wtforms==2.3.1            # via -r requirements.txt, flask-wtf
+wtforms==2.3.3            # via -r requirements.txt, flask-wtf
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
