--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -8,20 +8,20 @@ alabaster==0.7.12         # via sphinx
 appdirs==1.4.4            # via black, virtualenv
 astroid==2.4.2            # via pylint
 asynctest==0.13.0         # via -r requirements-dev.in
-attrs==20.1.0             # via -r requirements.txt, black, cattrs, pytest
+attrs==20.2.0             # via -r requirements.txt, cattrs, pytest
 babel==2.8.0              # via -r requirements.txt, flask-babel, sphinx
 bandit==1.6.2             # via -r requirements-dev.in
-black==19.10b0 ; python_version >= "3.6"  # via -r requirements-dev.in
-bleach==3.1.5             # via readme-renderer
-cattrs==1.0.0             # via -r requirements.txt
+black==20.8b1 ; python_version >= "3.6"  # via -r requirements-dev.in
+bleach==3.2.1             # via readme-renderer
+cattrs==1.1.1             # via -r requirements.txt
 certifi==2020.6.20        # via -r requirements.txt, requests
-cffi==1.14.2              # via cryptography
+cffi==1.14.3              # via cryptography
 chardet==3.0.4            # via -r requirements.txt, doc8, requests
 click==7.1.2              # via -r requirements.txt, black, flask, pip-tools
-colorama==0.4.3           # via green, twine
-coverage==5.2.1           # via coveralls, green, nose2
+colorama==0.4.4           # via green, twine
+coverage==5.3             # via coveralls, green, nose2
 coveralls==2.1.2          # via -r requirements-dev.in
-cryptography==3.0         # via secretstorage
+cryptography==3.2.1       # via secretstorage
 distlib==0.3.1            # via virtualenv
 dnspython==2.0.0          # via -r requirements.txt, email-validator
 doc8==0.8.1               # via -r requirements-dev.in
@@ -30,37 +30,36 @@ docutils==0.16            # via -r requirements-dev.in, doc8, readme-renderer, r
 email-validator==1.1.1    # via -r requirements.txt
 filelock==3.0.12          # via tox, virtualenv
 flake8-isort==4.0.0       # via -r requirements-dev.in
-flake8==3.8.3             # via flake8-isort
-flask-babel==1.0.0        # via -r requirements.txt
+flake8==3.8.4             # via flake8-isort
+flask-babel==2.0.0        # via -r requirements.txt
 flask-wtf==0.14.3         # via -r requirements.txt
 flask==1.1.2              # via -r requirements.txt, flask-babel, flask-wtf
 gitdb==4.0.5              # via gitpython
-gitpython==3.1.7          # via bandit
-green==3.2.1              # via -r requirements-dev.in
+gitpython==3.1.11         # via bandit
+green==3.2.4              # via -r requirements-dev.in
 gunicorn==20.0.4          # via -r requirements.txt
 idna==2.10                # via -r requirements.txt, email-validator, requests
 imagesize==1.2.0          # via sphinx
-iniconfig==1.0.1          # via pytest
-isort==5.4.2              # via flake8-isort, pylint
+iniconfig==1.1.1          # via pytest
+isort==5.6.4              # via flake8-isort, pylint
 itsdangerous==1.1.0       # via -r requirements.txt, flask, flask-wtf
 jeepney==0.4.3            # via keyring, secretstorage
 jinja2==2.11.2            # via -r requirements.txt, flask, flask-babel, pybadges, sphinx
-keyring==21.3.0           # via twine
+keyring==21.4.0           # via twine
 lazy-object-proxy==1.4.3  # via astroid
 libgravatar==0.2.4        # via -r requirements.txt
-lxml==4.5.2               # via green
-markdown==3.2.2           # via -r requirements.txt
+lxml==4.6.1               # via green
+markdown==3.3.3           # via -r requirements.txt
 markupsafe==1.1.1         # via -r requirements.txt, jinja2, wtforms
 mccabe==0.6.1             # via flake8, pylint
-more-itertools==8.4.0     # via pytest
-mypy-extensions==0.4.3    # via mypy
-mypy==0.782               # via -r requirements-dev.in
+mypy-extensions==0.4.3    # via black, mypy
+mypy==0.790               # via -r requirements-dev.in
 nose2==0.9.2              # via -r requirements-dev.in
 packaging==20.4           # via bleach, pytest, sphinx, tox
 pathspec==0.8.0           # via black
-pbr==5.4.5                # via stevedore
+pbr==5.5.1                # via stevedore
 pip-tools==5.3.1          # via -r requirements-dev.in
-pkginfo==1.5.0.1          # via twine
+pkginfo==1.6.1            # via twine
 pluggy==0.13.1            # via pytest, tox
 py==1.9.0                 # via pytest, tox
 pyaml==20.4.0             # via -r requirements.txt
@@ -68,17 +67,17 @@ pybadges==2.2.1           # via -r requirements-dev.in
 pycodestyle==2.6.0        # via flake8
 pycparser==2.20           # via cffi
 pyflakes==2.2.0           # via flake8
-pygments==2.6.1           # via -r requirements-dev.in, doc8, readme-renderer, sphinx
+pygments==2.7.2           # via -r requirements-dev.in, doc8, readme-renderer, sphinx
 pyjwt==1.7.1              # via -r requirements.txt
 pylint==2.6.0             # via -r requirements-dev.in
 pyparsing==2.4.7          # via packaging
-pytest==6.0.1             # via -r requirements-dev.in
-python-dotenv==0.14.0     # via -r requirements.txt
-pytz==2020.1              # via -r requirements.txt, babel, flask-babel
+pytest==6.1.2             # via -r requirements-dev.in
+python-dotenv==0.15.0     # via -r requirements.txt
+pytz==2020.4              # via -r requirements.txt, babel, flask-babel
 pyyaml==5.3.1             # via -r requirements.txt, bandit, pyaml
-readme-renderer==26.0     # via twine
+readme-renderer==28.0     # via twine
 redis==3.5.3              # via -r requirements.txt
-regex==2020.7.14          # via black
+regex==2020.10.28         # via black
 requests-toolbelt==0.9.1  # via twine
 requests==2.24.0          # via -r requirements.txt, coveralls, pybadges, requests-toolbelt, sphinx, twine
 restructuredtext-lint==1.3.1  # via doc8
@@ -89,7 +88,7 @@ six==1.15.0               # via astroid, bandit, bleach, cryptography, doc8, nos
 smmap==3.0.4              # via gitdb
 snowballstemmer==2.0.0    # via sphinx
 sphinx-rtd-theme==0.5.0   # via -r requirements-dev.in
-sphinx==3.2.1             # via -r requirements-dev.in, sphinx-rtd-theme, sphinxcontrib-httpdomain
+sphinx==3.3.0             # via -r requirements-dev.in, sphinx-rtd-theme, sphinxcontrib-httpdomain
 sphinxcontrib-applehelp==1.0.2  # via sphinx
 sphinxcontrib-devhelp==1.0.2  # via sphinx
 sphinxcontrib-htmlhelp==1.0.3  # via sphinx
@@ -97,17 +96,17 @@ sphinxcontrib-httpdomain==1.7.0  # via -r requirements-dev.in
 sphinxcontrib-jsmath==1.0.1  # via sphinx
 sphinxcontrib-qthelp==1.0.3  # via sphinx
 sphinxcontrib-serializinghtml==1.1.4  # via sphinx
-stevedore==3.2.0          # via bandit, doc8
-testfixtures==6.14.1      # via flake8-isort
-toml==0.10.1              # via black, pylint, pytest, tox
-tox==3.19.0               # via -r requirements-dev.in
-tqdm==4.48.2              # via twine
+stevedore==3.2.2          # via bandit, doc8
+testfixtures==6.15.0      # via flake8-isort
+toml==0.10.2              # via black, pylint, pytest, tox
+tox==3.20.1               # via -r requirements-dev.in
+tqdm==4.51.0              # via twine
 twine==3.2.0              # via -r requirements-dev.in
 typed-ast==1.4.1          # via black, mypy
-typing-extensions==3.7.4.2  # via mypy
+typing-extensions==3.7.4.3  # via black, mypy
 unidecode==1.1.1          # via green
-urllib3==1.25.10          # via -r requirements.txt, requests
-virtualenv==20.0.31       # via tox
+urllib3==1.25.11          # via -r requirements.txt, requests
+virtualenv==20.1.0        # via tox
 webencodings==0.5.1       # via bleach
 werkzeug==1.0.1           # via -r requirements.txt, flask
 wrapt==1.12.1             # via astroid
